# fedrag

./: .gitignore  CLAUDE.MD  Procfile  README.md  fed_rag_project_plan.md  main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  MessageList.tsx  SourceCard.tsx
frontend/src/types/: index.ts
scripts/: run_scraper.py
src/fedrag/: __init__.py  cli.py  config.py
src/fedrag/api/: __init__.py  main.py
src/fedrag/chunking/: __init__.py  chunker.py
src/fedrag/embeddings/: __init__.py  openai_embedder.py  sparse_embedder.py
src/fedrag/models/: __init__.py  document.py
src/fedrag/scrapers/: __init__.py  base.py  fomc_minutes.py  fomc_statements.py  orchestrator.py  pdf_handler.py  speeches.py  testimony.py
src/fedrag/services/: __init__.py  indexing.py  llm.py  query_pipeline.py  reranker.py
src/fedrag/storage/: __init__.py  document_store.py
src/fedrag/utils/: __init__.py  rate_limiter.py  retry.py
src/fedrag/vector_store/: __init__.py  qdrant_store.py
tests/: __init__.py
