[project]
name = "fedrag"
version = "0.1.0"
description = "Federal Reserve document collection and RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pypdf>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "tiktoken>=0.5.0",
    "fastembed>=0.3.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fedrag = "fedrag.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
